--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.9.6",
     "@vue/cli-plugin-babel": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
